# jko-rag

./: .gitignore  README.md  pyproject.toml
paper/: bibliography.bib  main.tex  neurips_2024.sty
results/: INVENTORY.md  REFERENCE_VERIFICATION.md  REPORT.md  THEORY.md  THEORY_stability.md  ablations_scifact_test.json  best_hparams_fiqa.json  best_hparams_nfcorpus.json  best_hparams_scifact.json  bge_geometry_fiqa.json  bge_geometry_nfcorpus.json  bge_geometry_scifact.json  blend_ablation.json  contrib_cfg.json  contrib_fiqa.json  contrib_nfcorpus.json  contrib_scidocs.json  contrib_scifact.json  distractors_fiqa.json  distractors_nfcorpus.json  distractors_scidocs.json  distractors_scifact.json  dpp_fiqa.json  dpp_nfcorpus.json  dpp_scifact.json  dual_selective_fiqa.json  dual_selective_nfcorpus.json  dual_selective_scidocs.json  dual_selective_scifact.json  iter_retgen_scifact.json  mr_jko_bench.json  retrieved.json  scidocs_cfg.json  stability.json  stability_fiqa.json  stability_new_fiqa.json  stability_new_nfcorpus.json  stability_new_scifact.json  stability_nfcorpus.json  stability_scidocs.json  (+16 more)
scripts/: extract_theory_numbers.py  make_figures.py  make_theory_figures.py
src/: aggregate_results.py  analyze.py  build_indices.py  chain_after_precompute.sh  data_loader.py  download_data.py  download_more.py  download_scifact_orig.py  dpp_retrieval.py  dual_rank_selective.py  evaluation.py  final_report.py  finetune_dense.py  hierarchical_jko.py  index_multi.py  iter_retgen.py  jko.py  learned_metric.py  make_report.py  methods.py  nm_jko_end2end.py  plots.py  (+35 more)
