[project]
name = "jko-rag"
version = "0.1.0"
description = "JKO-RAG: Wasserstein Free-Energy Descent for Retrieval"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "rank-bm25>=0.2.2",
    "POT>=0.9.3",
    "tqdm>=4.66.0",
    "datasets>=2.18.0",
    "pytrec-eval>=0.5",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "requests>=2.31.0",
]
